# server/model/system/response/sys_user.go
@@ -2,15 +2,13 @@ package response
 
 import (
 	"github.com/gofrs/uuid/v5"
-	"github.com/zhengpanone/gin-vue3-admin/model/entity/system"
 )
 
 type LoginResponse struct {
-	User      system.SysUser `json:"user"`
-	Token     string         `json:"token"`
-	ExpiresAt int64          `json:"expiresAt"`
-	UserInfo  UserInfo       `json:"userInfo"`
-	Menus     []Menus        `json:"menus"`
+	Token     string   `json:"token"`
+	ExpiresAt int64    `json:"expiresAt"`
+	UserInfo  UserInfo `json:"userInfo"`
+	Menus     []Menus  `json:"menus"`
 }
 type UserInfo struct {
 	Id      uuid.UUID `json:"id"`
